rules/exposure-to-internet/test/detect_with_ingress/input/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: alb-public
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/target-type: ip
    argocd.argoproj.io/tracking-id: myapp-prod-api-be:networking.k8s.io/Ingress:myapp-api/myapp-api-ig
  creationTimestamp: '2025-09-16T05:05:58Z'
  finalizers:
  - group.ingress.k8s.aws/alb-public
  generation: 3
  name: myapp-api-ig
  namespace: myapp-api
  resourceVersion: '68520664'
  uid: f2aac534-c77b-4eca-9e32-2c45812a14c8
spec:
  ingressClassName: alb
  rules:
  - host: api.example.com
    http:
      paths:
      - backend:
          service:
            name: myapp-api-be
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api-production.example.com
    http:
      paths:
      - backend:
          service:
            name: myapp-api-be
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: wss.example.com
    http:
      paths:
      - backend:
          service:
            name: myapp-wss-be
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: alb-public-123456789.us-east-1.elb.amazonaws.com
