rules/exposure-to-internet/test/detect_with_ingress/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: myapp-prod-api-be:/Service:myapp-api/myapp-api-be
  creationTimestamp: '2025-09-16T05:05:57Z'
  name: myapp-api-be
  namespace: myapp-api
  resourceVersion: '68520620'
  uid: 17ee688e-ebaa-4009-849d-409c7980d1ae
spec:
  clusterIP: 172.20.108.234
  clusterIPs:
  - 172.20.108.234
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: myapp-api
    tier: backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
